# gdc-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
gdc_cli/: __init__.py  aliases.yaml  assemble.py  cli.py  client.py  config.py  downloader.py  env.py  filters.py  mcp_server.py  schema.py
tests/: test_filters.py
